janet-check/src/analysis/modules/snapshots/janet_check__analysis__modules__tests__declared_source_without_a_prefix.snap
---
source: src/analysis/modules/tests.rs
expression: "(declare-source :source \"tool.janet\")"
---
----- SOURCE CODE
(declare-source :source "tool.janet")

----- PACKAGES
tool loads /ws/tool.janet
