janet-check/src/analysis/modules/snapshots/janet_check__analysis__modules__tests__import_a_relative_module.snap
---
source: src/analysis/modules/tests.rs
expression: (import ./a)
---
----- SOURCE CODE
(import ./a)

----- IMPORTS
./a as "a/"
