janet-check/src/analysis/modules/snapshots/janet_check__analysis__modules__tests__import_with_an_alias.snap
---
source: src/analysis/modules/tests.rs
expression: "(import spork/json :as j)"
---
----- SOURCE CODE
(import spork/json :as j)

----- IMPORTS
spork/json as "j/"
