janet-check/src/analysis/modules/snapshots/janet_check__analysis__modules__tests__import_with_an_empty_prefix.snap
---
source: src/analysis/modules/tests.rs
expression: "(import \"../b\" :prefix \"\")"
---
----- SOURCE CODE
(import "../b" :prefix "")

----- IMPORTS
../b as ""
