janet-check/src/analysis/modules/snapshots/janet_check__analysis__modules__tests__other_forms_are_not_imports.snap
---
source: src/analysis/modules/tests.rs
expression: (print 1)
---
----- SOURCE CODE
(print 1)

----- IMPORTS
