janet-check/src/analysis/modules/snapshots/janet_check__analysis__modules__tests__require_and_dofile_load_without_binding.snap
---
source: src/analysis/modules/tests.rs
expression: "(require \"./a\")\n(dofile \"./b.janet\")\n(require path)"
---
----- SOURCE CODE
(require "./a")
(dofile "./b.janet")
(require path)

----- IMPORTS
./a as "" binds nothing
./b.janet as "" binds nothing
